<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout style="@style/TitleBar">
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/title_home"
            android:onClick="onClickHome" />

        <ImageView style="@style/TitleBarSeparator" />
        <TextView style="@style/TitleBarText" />
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_about"
            android:src="@drawable/title_about"
            android:onClick="onClickAbout" />
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:src="@drawable/title_search"
            android:onClick="onClickSearch" />
    </LinearLayout>
<TextView  
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:text="@string/feature1_intro"
    />

<EditText 
android:layout_height="wrap_content"
android:id="@+id/address1"
android:layout_width="fill_parent"
android:text="www.google.com"
>
</EditText>
<EditText 
android:layout_height="wrap_content"
android:id="@+id/port1"
android:layout_width="fill_parent"
android:text="80"
>
</EditText>
 
 <Button
 android:id="@+id/portScan1" 
 android:layout_width="fill_parent" 
 android:layout_height="wrap_content"
 android:text="Port Scan"
 >
  </Button>
<EditText 
	android:id="@+id/pagetext1" 
	android:layout_height="wrap_content" 
	android:layout_width="fill_parent"
	>
</EditText>

</LinearLayout>
