<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2012 Shashank Agarwal
    
    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout style="@style/TitleBar" >

        <LinearLayout
            style="@style/TitleBar"
            android:layout_height="match_parent" >

            <ImageButton
                style="@style/TitleBarAction"
                android:contentDescription="@string/description_home"
                android:onClick="onClickHome"
                android:src="@drawable/title_home" />

            <ImageView style="@style/TitleBarSeparator" />

            <TextView style="@style/TitleBarText" />

            <ImageButton
                style="@style/TitleBarAction"
                android:contentDescription="@string/description_about"
                android:onClick="onClickAbout"
                android:src="@drawable/title_about" />

            <ImageButton
                style="@style/TitleBarAction"
                android:contentDescription="@string/description_search"
                android:onClick="onClickSearch"
                android:src="@drawable/title_search" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feature3_intro" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:onClick="onClickHome"
            android:src="@drawable/title_home" />

        <ImageView style="@style/TitleBarSeparator" />

        <TextView style="@style/TitleBarText" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_about"
            android:onClick="onClickAbout"
            android:src="@drawable/title_about" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:onClick="onClickSearch"
            android:src="@drawable/title_search" />
    </LinearLayout>

<TextView  
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:text="@string/feature3_intro"
    />
<EditText 
android:layout_height="wrap_content"
android:id="@+id/address"
android:layout_width="fill_parent"
android:text="www.google.com"
>
</EditText>
 

  <Button 
android:text="IP Resolver" 
android:id="@+id/button1" 
android:layout_width="fill_parent" 
android:layout_height="wrap_content">
</Button>

<EditText 
	android:id="@+id/output" 
	android:layout_height="wrap_content" 
	android:layout_width="fill_parent"
	>
</EditText>

</LinearLayout>
